# HWs

./: .gitignore  README.md
OOP/: BitArray(Rylov 2nd).cpp  CMakeLists.txt  Rational class (Phillipov 3rd).cpp  main.cpp  personal budget programm(Phillipov 4th).cpp
OOP/BitArray/: CMakeLists.txt  mybitarray.cpp  mybitarray.h  test.cpp
OOP/CSV parser/: CMakeLists.txt  in.csv  main.cpp  p  sir_gay.cpp  tst.csv  varn.cpp
OOP/Fucking modules/: App  launch  main.cpp  module1.cxx  module2.cxx
OOP/Life/: CMakeLists.txt  a  a.out  cmake-build-debug-  l  main.cpp  zeromode.txt
OOP/OOP/: CMakeLists.txt  mybitarray.cpp  test.cpp
OOP/Phillipov homeworks/: 10  10th.cpp  11  11th.cpp  12  12class.cpp  12th.cpp  13  13th.cpp  14th.cpp  7  7th.cpp  8  8th.cpp  CMakeLists.txt  Notifier.cpp  a.out  egor.cpp  ini.h  (+6 more)
OOP/modules/: CMakeLists.txt  main.cpp  mod1.cppm
OSs/: CMakeLists.txt  main.c
PHC/: 13.4.ipynb  AutopilotEmbryo.py  Lab10.py  Lab9.1.py  Lesson13.ipynb  TViMS.ipynb  bubble_sort.py  classWork11.py  classWork12.py  classWork13.py  classWork2.py  classWork3.py  classWork4.py  classWork5.py  classWork6.py  classWork7.py  classWork9.1.py  classWork9.2.py  classwork8.py  dataGenerator.py  evrey.py  figureExplorer.py  input.txt  lab1(pascalTriangle).py  lab1.py  lab11.py  lab12.py  lab2(matrix_mult).py  lab3.2.py  lab3.py  lab4.py  lab5(1.2).py  lab6.py  lab7(sift).py  lab7.py  lab7orb.py  les13.ipynb  main.py  makeWashingOrders.py  matrix_mult.py  (+11 more)
a0x5/: #main.cpp#  CMakeLists.txt  a.out  main.cpp  module1.ixx  module2.ixx
tst/: App  Makefile  main.cpp  module2.cxx
(+17 files in other folders)
